Address Copilot review comments